err/pip-clients-logging.err
Listing '.'...
Listing './bin'...
Compiling './bin/bottle.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/bottle-0.12.13.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/iso8601'...
Listing './lib/python3.5/site-packages/iso8601-0.1.12.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pip_clients_logging'...
Listing './lib/python3.5/site-packages/pip_clients_logging/build'...
Listing './lib/python3.5/site-packages/pip_clients_logging/log'...
Listing './lib/python3.5/site-packages/pip_clients_logging/version1'...
Listing './lib/python3.5/site-packages/pip_clients_logging-2.0.0.egg-info'...
Listing './lib/python3.5/site-packages/pip_services_commons'...
Listing './lib/python3.5/site-packages/pip_services_commons/auth'...
Listing './lib/python3.5/site-packages/pip_services_commons/build'...
Listing './lib/python3.5/site-packages/pip_services_commons/cache'...
Listing './lib/python3.5/site-packages/pip_services_commons/commands'...
Listing './lib/python3.5/site-packages/pip_services_commons/config'...
Listing './lib/python3.5/site-packages/pip_services_commons/connect'...
Listing './lib/python3.5/site-packages/pip_services_commons/convert'...
Compiling './lib/python3.5/site-packages/pip_services_commons/convert/LongConverter.py'...
***   File "./lib/python3.5/site-packages/pip_services_commons/convert/LongConverter.py", line 28
    return LongConverter.to_long_with_default(value, 0L)
                                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pip_services_commons/convert/TypeConverter.py'...
***   File "./lib/python3.5/site-packages/pip_services_commons/convert/TypeConverter.py", line 107
    return 0L
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip_services_commons/count'...
Listing './lib/python3.5/site-packages/pip_services_commons/data'...
Listing './lib/python3.5/site-packages/pip_services_commons/errors'...
Listing './lib/python3.5/site-packages/pip_services_commons/log'...
Compiling './lib/python3.5/site-packages/pip_services_commons/log/LogLevelConverter.py'...
***   File "./lib/python3.5/site-packages/pip_services_commons/log/LogLevelConverter.py", line 31
    return LogLevel.None
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip_services_commons/random'...
Listing './lib/python3.5/site-packages/pip_services_commons/refer'...
Listing './lib/python3.5/site-packages/pip_services_commons/reflect'...
Listing './lib/python3.5/site-packages/pip_services_commons/run'...
Listing './lib/python3.5/site-packages/pip_services_commons/validate'...
Listing './lib/python3.5/site-packages/pip_services_commons-2.4.1.egg-info'...
Listing './lib/python3.5/site-packages/pip_services_net'...
Listing './lib/python3.5/site-packages/pip_services_net/direct'...
Listing './lib/python3.5/site-packages/pip_services_net/messaging'...
Listing './lib/python3.5/site-packages/pip_services_net/rest'...
Listing './lib/python3.5/site-packages/pip_services_net-2.0.0.egg-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pystache'...
Listing './lib/python3.5/site-packages/pystache/commands'...
Listing './lib/python3.5/site-packages/pystache/tests'...
Listing './lib/python3.5/site-packages/pystache/tests/data'...
Listing './lib/python3.5/site-packages/pystache/tests/data/locator'...
Listing './lib/python3.5/site-packages/pystache/tests/examples'...
Listing './lib/python3.5/site-packages/pystache-0.5.4.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/test'...
Listing './lib/python3.5/site-packages/test/direct'...
Listing './lib/python3.5/site-packages/test/messaging'...
Listing './lib/python3.5/site-packages/test/rest'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
